# osef-me-client

./: .gitignore  package.json  vite.config.ts
src/: App.tsx  env.d.ts  global.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: init_loop.rs  lib.rs  main.rs
src-tauri/src/beatmap/: mod.rs  monitoring.rs  serialization.rs
src-tauri/src/calc/: etterna.rs  mod.rs  nps.rs  osu.rs  sunnyxxy.rs
src-tauri/src/commands/: beatmap.rs  connection.rs  download.rs  mod.rs  packmaker.rs  preferences.rs  settings.rs
src-tauri/src/commands/connection/: mod.rs  monitoring.rs
src-tauri/src/commands/download/: helpers.rs  mod.rs
src-tauri/src/core/: mod.rs  preferences.rs
src-tauri/src/core/beatmap/: detection.rs  mod.rs  monitoring.rs  serialization.rs
src-tauri/src/core/calc/: etterna.rs  mod.rs  nps.rs  osu.rs  sunnyxxy.rs
src-tauri/src/core/connection/: helpers.rs  init_loop.rs  mod.rs  monitoring.rs  types.rs
src-tauri/src/core/download/: helpers.rs  http.rs  mod.rs  stream.rs  types.rs
src-tauri/src/core/edit/: mod.rs
src-tauri/src/core/edit/ln/: ln.rs  mod.rs  noln.rs
src-tauri/src/core/edit/rates/: mod.rs  rates.rs
src-tauri/src/core/internal/: mod.rs
src-tauri/src/core/packmaker/: mod.rs
src-tauri/src/core/react/: beatmap_info.rs  beatmap_modifications.rs  beatmapset.rs  mod.rs  nps_data.rs  rates.rs  rating_info.rs
src-tauri/src/models/: mod.rs
src-tauri/src/models/internal/: beatmap_with_rates.rs  mod.rs
src-tauri/src/models/react/: beatmap_info.rs  beatmap_modifications.rs  mod.rs  nps_data.rs
src/api/: client.ts  (+2 more)
(+177 files in other folders)
