[package]
name = "osef-me-client"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "osef_me_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "macros", "sync", "fs"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
rosu-memory-lib = "1.3"
rosu-mem = "2.0.0"
base64 = "0.22"
minacalc-rs = { version = "0.2.2", features = ["osu", "hashmap"] }
rosu-pp = "3.1.0"
ssrrr = "0.1.0"
rosu-map = "0.2.0"
md5 = "0.8"
anyhow = "1"
lazy_static = "1.4"
futures-util = "0.3"
dirs = "6.0"
toml = "0.9"

[profile.dev.package.rosu-mem]
opt-level = 3

[profile.dev.package.minacalc-rs]
opt-level = 3

[profile.dev.package.ssrrr]
opt-level = 3
